# paytaca-gifts

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fabfile.py  main.py  models.py  pyproject.toml  settings.py  supervisord.conf
database/: models.py
deployment/: .env_prod_template  .env_template  docker-compose_prod.yml  nginx.conf  supervisord_prod.conf
env/: pyvenv.cfg
handlers/: __init__.py  campaigns.py  gifts.py
migrations/models/: 0_20221121134624_init.sql  1_20221121140506_update.sql
tasks/: __init__.py
templates/: gift.html
utils/: doc_schemas.py
